prevent story items using narrow gaps
prevents items using overflow from slipping into the gap
between two half page width items.

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -153,6 +153,10 @@ footer {
 .story {
   padding-bottom: 5px; }
 
+.story .item {
+  min-width: 40%;
+}
+
 .story code {
   background: rgba(0,0,0,0.04);
   padding: 0.2em 0.4em;
